force-app/main/default/objects/Property__c/fields/Additional_Room__c.field-meta.xml
<CustomField>
    <fullName>Additional_Room__c</fullName>
    <label>Additional Room</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1Bedroom</fullName>
            </value>
            <value>
                <fullName>2Bedroom</fullName>
            </value>
            <value>
                <fullName>3Bedroom</fullName>
            </value>
            <value>
                <fullName>1Bedroom +1Kitchen</fullName>
            </value>
            <value>
                <fullName>2Bedroom +1Kitchen</fullName>
            </value>
            <value>
                <fullName>3Bedroom+1Kitchen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>