force-app/main/default/objects/Property__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Lodhiyana</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>