force-app/main/default/objects/Property__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>Carpet Area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>