force-app/main/default/objects/Property__c/fields/Covered_Area__c.field-meta.xml
<CustomField>
    <fullName>Covered_Area__c</fullName>
    <label>Covered Area</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>