force-app/main/default/objects/Property__c/fields/Electricity_Status__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Status__c</fullName>
    <label>Electricity Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>