force-app/main/default/objects/Property__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>