force-app/main/default/objects/Property__c/fields/For_Bachellor__c.field-meta.xml
<CustomField>
    <fullName>For_Bachellor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Bachellor</label>
    <type>Checkbox</type>
</CustomField>