force-app/main/default/objects/Property__c/fields/For_Family__c.field-meta.xml
<CustomField>
    <fullName>For_Family__c</fullName>
    <label>For Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>