force-app/main/default/objects/Property__c/fields/Furnishing_Avaiable__c.field-meta.xml
<CustomField>
    <fullName>Furnishing_Avaiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnishing Avaiable</label>
    <type>Checkbox</type>
</CustomField>