force-app/main/default/objects/Property__c/fields/LandMark__c.field-meta.xml
<CustomField>
    <fullName>LandMark__c</fullName>
    <label>LandMark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>