force-app/main/default/objects/Property__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <label>LastActivityDate</label>
    <type>Date</type>
</CustomField>