force-app/main/default/objects/Property__c/fields/No_of_Bathroom__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bathroom__c</fullName>
    <label>No of Bathroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>