force-app/main/default/objects/Property__c/fields/Property_description__c.field-meta.xml
<CustomField>
    <fullName>Property_description__c</fullName>
    <label>Property description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>