force-app/main/default/objects/Property__c/fields/Property_Main_Image__c.field-meta.xml
<CustomField>
    <fullName>Property_Main_Image__c</fullName>
    <label>Property Main Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>