force-app/main/default/objects/Property__c/fields/Property_Video_Url__c.field-meta.xml
<CustomField>
    <fullName>Property_Video_Url__c</fullName>
    <label>Property Video Url</label>
    <type>Url</type>
</CustomField>