force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>Maharastra</fullName>
            </value>
            <value>
                <fullName>UttarPradesh</fullName>
            </value>
            <value>
                <fullName>HimachalPradesh</fullName>
            </value>
            <value>
                <fullName>telangana</fullName>
            </value>
            <value>
                <fullName>AndraPradesh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>