force-app/main/default/objects/Property__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <label>SystemModstamp</label>
    <type>DateTime</type>
</CustomField>