force-app/main/default/objects/Property__c/fields/Water_Avaiblity__c.field-meta.xml
<CustomField>
    <fullName>Water_Avaiblity__c</fullName>
    <label>Water Avaiblity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>