force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>IsDeleted__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>LastModifiedDate__c</columns>
    <columns>SystemModstamp__c</columns>
    <columns>LastActivityDate__c</columns>
    <columns>Additional_Room__c</columns>
    <columns>Area__c</columns>
    <columns>Available_From__c</columns>
    <columns>Carpet_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>